monitoring/03-alertmanager/05-ingress-alertmanager.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.moone.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager-svc
                port:
                  number: 9093
